force-app/main/default/objects/Account/fields/Approved_Claims_12M__c.field-meta.xml
<CustomField>
    <fullName>Approved_Claims_12M__c</fullName>
    <description>Count of approved warranty claims from this dealer in the last 12 months. Populated via scheduled Apex (Agent 4) — cannot use rollup summary due to relative date filter requirement.</description>
    <label>Approved Claims (12M)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>