force-app/main/default/objects/Account/fields/Authorized_Models__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Models__c</fullName>
    <description>Electra vehicle models this dealer is authorized to service.</description>
    <label>Authorized Models</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EV-200</fullName>
            </value>
            <value>
                <fullName>EV-300</fullName>
            </value>
            <value>
                <fullName>EV-400</fullName>
            </value>
            <value>
                <fullName>EV-500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>