force-app/main/default/objects/Account/fields/Claim_Accuracy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Claim_Accuracy_Rate__c</fullName>
    <description>Percentage of dealer-submitted claims that were approved without rework. Updated periodically via scheduled Apex.</description>
    <label>Claim Accuracy Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>