force-app/main/default/objects/Account/fields/Credibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Credibility_Score__c</fullName>
    <defaultValue>75</defaultValue>
    <description>Dealer credibility score (0–100). Used in EWI claim scoring. Default: 75.</description>
    <label>Credibility Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>