force-app/main/default/objects/Account/fields/DC_Segment__c.field-meta.xml
<CustomField>
    <fullName>DC_Segment__c</fullName>
    <description>Dealer segment classification synced from Data Cloud calculated insights.</description>
    <label>Data Cloud Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Flagged</fullName>
            </value>
            <value>
                <fullName>Watchlist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>