force-app/main/default/objects/Account/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <description>Unique dealer identifier code. Used as external ID for data integration.</description>
    <externalId>true</externalId>
    <label>Dealer Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>