force-app/main/default/objects/Account/fields/Fraud_Flag_Count__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Flag_Count__c</fullName>
    <description>Count of fraud signals raised against claims from this dealer. Populated via scheduled Apex once Fraud_Signal__c object is deployed.</description>
    <label>Fraud Flag Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>