force-app/main/default/objects/Account/fields/Is_Active_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Dealer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the dealer is currently active and authorized to submit claims.</description>
    <label>Is Active Dealer</label>
    <type>Checkbox</type>
</CustomField>