force-app/main/default/objects/Account/fields/Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Date__c</fullName>
    <description>Date the dealer was onboarded into the Electra Warranty Intelligence system.</description>
    <label>Onboarding Date</label>
    <type>Date</type>
</CustomField>