force-app/main/default/objects/Account/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>Dealer tier classification. Default is 3 (entry level).</description>
    <label>Dealer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>