force-app/main/default/objects/Account/fields/WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Number__c</fullName>
    <description>Dealer WhatsApp contact number used for Digital Engagement routing and inbound claim intake.</description>
    <label>WhatsApp Number</label>
    <type>Phone</type>
</CustomField>