force-app/main/default/objects/Account/recordTypes/Dealer.recordType-meta.xml
<RecordType>
    <fullName>Dealer</fullName>
    <active>true</active>
    <description>Authorized Electra dealership or service center. Drives credibility scoring, fraud detection, and dealer performance analytics.</description>
    <label>Dealer</label>
</RecordType>