force-app/main/default/objects/Account/recordTypes/OEM_Internal.recordType-meta.xml
<RecordType>
    <fullName>OEM_Internal</fullName>
    <active>true</active>
    <description>Electra Cars internal departments (engineering, quality, finance). Used for internal campaign approvals and warranty policy ownership.</description>
    <label>OEM Internal</label>
</RecordType>