force-app/main/default/objects/Account/recordTypes/Supplier.recordType-meta.xml
<RecordType>
    <fullName>Supplier</fullName>
    <active>true</active>
    <description>Parts supplier or OEM component manufacturer. Linked to Product2.Supplier_Account__c for supplier quality tracking.</description>
    <label>Supplier</label>
</RecordType>